force-app/main/default/objects/OutboundTransaction__c/OutboundTransaction__c.object-meta.xml
<CustomObject>
    <label>Outbound Transaction</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>