force-app/main/default/objects/OutboundTransaction__c/fields/Payment_to__c.field-meta.xml
<CustomField>
    <fullName>Payment_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Transaction</relationshipLabel>
    <relationshipName>Outbound_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>