force-app/main/default/objects/OutboundTransaction__c/fields/Total_Cost_of_Goods_CNY__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Goods_CNY__c</fullName>
    <label>Total Cost of Goods (CNY)</label>
    <summarizedField>F_tms_Bill_Transaction__c.Total_Convert_to_CNY__c</summarizedField>
    <summaryForeignKey>F_tms_Bill_Transaction__c.Outbound_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>