force-app/main/default/objects/OutboundTransaction__c/recordTypes/Cost_of_Goods.recordType-meta.xml
<RecordType>
    <fullName>Cost_of_Goods</fullName>
    <active>true</active>
    <label>Cost of Goods</label>
</RecordType>