force-app/main/default/objects/OutboundTransaction__c/recordTypes/Extra_Cost.recordType-meta.xml
<RecordType>
    <fullName>Extra_Cost</fullName>
    <active>true</active>
    <label>Extra Cost</label>
</RecordType>