force-app/main/default/objects/OutboundTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Cost_Amount_CNY__c</columns>
    <columns>Total_Cost_Amount_VND__c</columns>
    <columns>Total_Cost_of_Goods_CNY__c</columns>
    <columns>Total_Cost_of_Goods_VND__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>